	  ASCII data (not yet hooked into anything).
	* drivers/usbhost/usbhost_hidkbd.c:  If CONFIG_HIDKBD_ENCODED is
	  defined, this driver will now use libc/misc/lib_kbdencode.c to
	  encode special function keys.
	* configs/olimex-lpc1766stk/hidkbd:  This configuration has been
	  converted to use the kconfig-frontends configuration tool.
	* drivers/lcd/ug-2864hsweg01.c and include/nuttx/lcd/ug-2864hsweg01.h:
	  Driver for UG-2864HSWEG01 OLED contributed by Darcy Gong.
	* configs/stm32f4discovery/src/up_ug2864hsweg01.c: Support for the
	  UG-2864HSWEG01 OLED for the STM32F4Discovery board.
	* drivers/usbhost/usbhost_hidkbd.c:  Correct a logic error in how
	  tasks waiting for read data are awakened.
	* libc/misc/lib_kbdencode.c and lib_kbddecode.c:  Now handles keypress
	  events too.  However, the USB HID keyboard drier has not yet been
	  updated to detect key release events.  That is kind of tricky in
	  the USB HID keyboard report data.
	* configs/mcu123-214x/nsh:  Converted to use the kconfig-frontends
	  configuration tool.
	* configs/zp214xpa:  Add basic support for the The0.net ZP213x/4xPA
	  board (with the LPC2148 and the UG_2864AMBAG01).
	* configs/sim/nxlines:  Add an nxlines configuration for the
	  simulator.
	* configs/zp214xpa/nxlines:  Add an nxlines configuration for the
	  ZP213x/4xPA (with the LPC2148 and the UG_2864AMBAG01).  Working
	  as of 2012-12-30.
	* configs/olimex-lpc1766stk/wlan:  Remove non-functional
	  configuration.
	* configs/stm32f4discovery/src and nuttx/drivers/lcd/ug-2864hsweg01.c:
	  Updates and correctinos for the UG-2864HSWEG01 from Darcy Gong.
	* configs/lm326965-ek:  All configurations converted to use the
	  kconfig-frontends configuration tool.
	* configs/Kconfig: NSH_MMCSDSPIPORTNO should depend on MMCSD_SPI,
	  not just SPI (from Jose Pablo Carballo).
	* arch/arm/src/arm/Kconfig and armv7m/Kconfig:  Add an option for
	  buildroot toolchains:  They may be EABI or OABI.